Init: try to use tailwind's focus-within and group attributes to handle visibility. Still need to find how to correctly hide the button, as hidden and block change the layout and invisible doesn't seem to work yet

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3069,6 +3069,10 @@ html {
   background-color: rgb(3 105 161 / var(--tw-bg-opacity));
 }
 
+.group:focus-within .group-focus-within\:visible {
+  visibility: visible;
+}
+
 @media not all and (min-width: 1536px) {
   .max-2xl\:hidden {
     display: none;
